--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,17 @@
 [tool.poetry]
 name = "furthrmind-sdk"
-version = "0.1.0"
+version = "0.1a0"
 description = "Official python wrapper for the FURTHRmind rest api."
 authors = ["Daniel Menne"]
 license = "GNU GENERAL PUBLIC LICENSE Version 3"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.7"
+python = ">=3.8"
 requests = "*"
 pymongo = "^4.6.2"
+pathvalidate = "^3.2.0"
+typing-extensions = "^4.10.0"
 
 
 [tool.poetry.group.dev.dependencies]
