--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,18 @@
 [tool.poetry]
 name = "furthrmind-sdk"
-version = "0.1a0"
+version = "0.1a4"
 description = "Official python wrapper for the FURTHRmind rest api."
 authors = ["Daniel Menne"]
 license = "GNU GENERAL PUBLIC LICENSE Version 3"
 readme = "README.md"
+repository = "https://github.com/FURTHRresearch/furthrmind-sdk"
 
 [tool.poetry.dependencies]
-python = ">=3.8"
+python = ">=3.10"
 requests = "*"
 pymongo = "^4.6.2"
 pathvalidate = "^3.2.0"
 typing-extensions = "^4.10.0"
-
-
-[tool.poetry.group.dev.dependencies]
 
 
 [build-system]
