--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "furthrmind-sdk"
-version = "0.1a5"
+version = "0.1a6"
 description = "Official python wrapper for the FURTHRmind rest api."
 authors = ["Daniel Menne"]
 license = "GNU GENERAL PUBLIC LICENSE Version 3"
@@ -8,13 +8,20 @@ readme = "README.md"
 repository = "https://github.com/FURTHRresearch/furthrmind-sdk"
 
 [tool.poetry.dependencies]
-python = ">=3.10"
+python = ">=3.10,<4.0"
 requests = "*"
 pymongo = "^4.6.2"
 pathvalidate = "^3.2.0"
 typing-extensions = "^4.10.0"
 pandas = "^2.2.1"
 
+
+[tool.poetry.group.dev.dependencies]
+pydoc-markdown = "^4.8.2"
+docmd = "^1.0.6"
+sphinx = "^7.2.6"
+sphinx-markdown-builder = "^0.6.6"
+sphinx-autodoc-typehints = "^2.0.0"
 
 [build-system]
 requires = ["poetry-core"]
