--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "furthrmind"
-version = "0.1b16"
+version = "0.1b17"
 description = "Official python wrapper for the FURTHRmind rest api."
 authors = ["Daniel Menne"]
 license = "GNU GENERAL PUBLIC LICENSE Version 3"
@@ -22,6 +22,8 @@ docmd = "^1.0.6"
 sphinx = "^7.2.6"
 sphinx-markdown-builder = "^0.6.6"
 sphinx-autodoc-typehints = "^2.0.0"
+openpyxl = "^3.1.3"
+
 
 [build-system]
 requires = ["poetry-core"]
