--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,10 @@ sphinx = "^7.2.6"
 sphinx-markdown-builder = "^0.6.6"
 sphinx-autodoc-typehints = "^2.0.0"
 openpyxl = "^3.1.3"
+mkdocs = "^1.6.0"
+mkdocstrings = "^0.25.2"
+mkdocs-material = "^9.5.30"
+mkdocstrings-python = "^1.10.7"
 
 
 [build-system]
