--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pymongo = "^4.6.2"
 pathvalidate = "^3.2.0"
 typing-extensions = "^4.10.0"
 pandas = "^2.0.0"
+iteration-utilities = "^0.13.0"
 
 [tool.poetry.group.dev.dependencies]
 pydoc-markdown = "^4.8.2"
@@ -28,6 +29,7 @@ mkdocs = "^1.6.0"
 mkdocstrings = "^0.25.2"
 mkdocs-material = "^9.5.30"
 mkdocstrings-python = "^1.10.7"
+pytest = "^8.3.3"
 
 
 [build-system]
